fix: spacing in main.ts and fade-in for all pages

--- a/src/scss/abstract/_mixin.scss
+++ b/src/scss/abstract/_mixin.scss
@@ -22,12 +22,10 @@
 
 @keyframes fadeIn {
     from {
-        opacity: 0;
-        transform: translateY(-10px);
+        opacity: 0.8;
     }
     to {
         opacity: 1;
-        transform: translateY(0px);
     }
 }
 
