--- a/src/scss/pages/_gameover.scss
+++ b/src/scss/pages/_gameover.scss
@@ -5,6 +5,10 @@
 .view--gameover {
     background-color: var(--color-bg);
     min-height: 100vh;
+
+    &.is-active {
+        @include mx.fade-in(0.3s);
+    }
 }
 
 .gameover {
