--- a/src/scss/pages/_settings.scss
+++ b/src/scss/pages/_settings.scss
@@ -9,6 +9,10 @@
     margin: 0 auto;
     overflow: hidden;
 
+    &.is-active {
+        @include mx.fade-in(0.3s);
+    }
+
     @include mx.respond(xl, xxl) {
         max-width: 1440px;
     }
